# media-ingestion

./: Cargo.toml  README.md
lib/ffmpeg_api/: Cargo.toml
lib/ffmpeg_api/src/: api.rs  enums.rs  err.rs  err_av.rs  err_ffi.rs  lib.rs
lib/media_time/: Cargo.toml
lib/media_time/src/: errors.rs  lib.rs  media_time.rs  tests.rs
lib/webvtt/: Cargo.toml
lib/webvtt/src/: lib.rs  webvtt.rs
src/: ffmpeg_api.rs  lib.rs  main.rs  media_time.rs  options.rs  spritesheet.rs  stream_metadata.rs  timelens.rs  webvtt.rs
src/ffmpeg_api/: api.rs  enums.rs  mod.rs
src/ingest/: extract.rs  mod.rs  spritesheet.rs
src/thumbnail/: extract.rs  mod.rs  spritesheet.rs
src/util/: media_time.rs  mod.rs  stream_metadata.rs  webvtt.rs
