[package]
name = "media-ingestion"
version = "0.1.1"
authors = ["Janne Mareike Koschinski <janne@kuschku.de>"]

description = """
Tool to automatically extract preview spritesheets, metadata information and thumbnails from video files.
Designed for use in media library management software.
"""

repository = "https://github.com/justjanne/media-ingestion"
readme = "README.md"
license = "MPL-2.0"

edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
fraction = "0.6"
image = "0.23"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
structopt = "0.3"

ffmpeg_api = { path = "lib/ffmpeg_api" }
media_time = { path = "lib/media_time" }
webvtt = { path = "lib/webvtt" }
