[package]
name = "media-ingestion"
version = "0.2.0"
authors = ["Janne Mareike Koschinski <janne@kuschku.de>"]

description = """
Tool to automatically extract preview spritesheets, metadata information and thumbnails from video files.
Designed for use in media library management software.
"""

repository = "https://github.com/justjanne/media-ingestion"
readme = "README.md"
license = "MPL-2.0"

edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.98"
fraction = "0.15.3"
image = "0.25.6"
serde_json = "1.0.140"
serde = { version = "1.0.219", features = ["derive"] }
structopt = "0.3.26"

ffmpeg_api = { path = "lib/ffmpeg_api" }
media_time = { path = "lib/media_time" }
webvtt = { path = "lib/webvtt" }
