[package]
name = "ffmpeg_api"
version = "0.1.0"
authors = ["Janne Mareike Koschinski <janne@kuschku.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitflags = "1.2.1"
ffmpeg-dev = "0.3.8"
fraction = "0.6.2"
num-traits = "0.2"
num-derive = "0.2"
thiserror = "1.0"

media_time = { path = "../media_time" }