[package]
name = "ffmpeg_api"
version = "0.1.0"
authors = ["Janne Mareike Koschinski <janne@kuschku.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitflags = "2.9.1"
rsmpeg = { version = "0.16", default-features = false, features = ["ffmpeg6", "link_system_ffmpeg"] }
fraction = "0.15.3"
num-traits = "0.2"
num-derive = "0.4.2"
thiserror = "2.0.12"

media_time = { path = "../media_time" }
